funcionalidad edicion de colaboradores de un grupo